Add legends section, team pages, black-orange theme, and real logos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basketball Hub - Allt um körfubolti</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=3">
 </head>
 <body>
     <!-- Navigation -->
@@ -16,6 +16,7 @@
                 <li><a href="#about" class="nav-link">Um körfubolti</a></li>
                 <li><a href="#rules" class="nav-link">Reglur</a></li>
                 <li><a href="#teams" class="nav-link">Lið</a></li>
+                <li><a href="#legends" class="nav-link">Goðsagnir</a></li>
                 <li><a href="#contact" class="nav-link">Samband</a></li>
             </ul>
             <div class="hamburger">
@@ -102,7 +103,7 @@
             <div class="teams-grid">
                 <a class="team-card-link" href="team.html?team=los-angeles-lakers">
                     <div class="team-card">
-                    <img src="images/los-angeles-lakers.png" alt="Los Angeles Lakers" class="team-image">
+                    <img src="images/los-angeles-lakers.svg" alt="Los Angeles Lakers" class="team-image">
                     <h3>Los Angeles Lakers</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Eitt af deildum legustu liðum NBA með 17 meistaratitlum</p>
@@ -110,7 +111,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=chicago-bulls">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c4/Chicago_Bulls_logo.svg/1200px-Chicago_Bulls_logo.svg.png" alt="Chicago Bulls" class="team-image">
+                    <img src="images/chicago-bulls.svg" alt="Chicago Bulls" class="team-image">
                     <h3>Chicago Bulls</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Goðsögulegt lið frá tímum Michael Jordan</p>
@@ -118,7 +119,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=boston-celtics">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Boston_Celtics_logo.svg/1200px-Boston_Celtics_logo.svg.png" alt="Boston Celtics" class="team-image">
+                    <img src="images/boston-celtics.svg" alt="Boston Celtics" class="team-image">
                     <h3>Boston Celtics</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">17 NBA meistaratitlar, metafengi flokki með Lakers</p>
@@ -126,7 +127,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=golden-state-warriors">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/01/Golden_State_Warriors_logo.svg/1200px-Golden_State_Warriors_logo.svg.png" alt="Golden State Warriors" class="team-image">
+                    <img src="images/golden-state-warriors.svg" alt="Golden State Warriors" class="team-image">
                     <h3>Golden State Warriors</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Þekkt fyrir bylting þrjú stiga leik sitt</p>
@@ -134,7 +135,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=miami-heat">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/fb/Miami_Heat_logo.svg/1200px-Miami_Heat_logo.svg.png" alt="Miami Heat" class="team-image">
+                    <img src="images/miami-heat.svg" alt="Miami Heat" class="team-image">
                     <h3>Miami Heat</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Klassísk austur lið með 3 meistaratitlum</p>
@@ -142,7 +143,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=new-york-knicks">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/ed/New_York_Knicks_logo.svg/1200px-New_York_Knicks_logo.svg.png" alt="New York Knicks" class="team-image">
+                    <img src="images/new-york-knicks.svg" alt="New York Knicks" class="team-image">
                     <h3>New York Knicks</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Lið Nýja Jórvíks með ríkri sögu</p>
@@ -150,7 +151,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=brooklyn-nets">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/94/Brooklyn_Nets_logo.svg/1200px-Brooklyn_Nets_logo.svg.png" alt="Brooklyn Nets" class="team-image">
+                    <img src="images/brooklyn-nets.svg" alt="Brooklyn Nets" class="team-image">
                     <h3>Brooklyn Nets</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Nýja Brooklyn körfubolti lið með stærk menn</p>
@@ -158,10 +159,51 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=dallas-mavericks">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/97/Dallas_Mavericks_logo.svg/1200px-Dallas_Mavericks_logo.svg.png" alt="Dallas Mavericks" class="team-image">
+                    <img src="images/dallas-mavericks.svg" alt="Dallas Mavericks" class="team-image">
                     <h3>Dallas Mavericks</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Texas körfuboltaliðið með glæsilegt leikstíl</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Legends Section -->
+    <section id="legends" class="teams legends-section">
+        <div class="container">
+            <h2>🏆 Goðsagnir körfuboltans</h2>
+            <div class="teams-grid">
+                <a class="team-card-link" href="legend.html?legend=michael-jordan">
+                    <div class="team-card legend-card">
+                    <img src="images/michael-jordan.png" alt="Michael Jordan" class="legend-image">
+                    <h3>Michael Jordan</h3>
+                    <p class="team-league">"His Airness"</p>
+                    <p class="team-description">6x NBA meistari, 5x MVP - Besti leikmaður allra tíma</p>
+                    </div>
+                </a>
+                <a class="team-card-link" href="legend.html?legend=kobe-bryant">
+                    <div class="team-card legend-card">
+                    <img src="images/kobe-bryant.png" alt="Kobe Bryant" class="legend-image">
+                    <h3>Kobe Bryant</h3>
+                    <p class="team-league">"Black Mamba"</p>
+                    <p class="team-description">5x NBA meistari, 18x All-Star - Mamba Mentality</p>
+                    </div>
+                </a>
+                <a class="team-card-link" href="legend.html?legend=lebron-james">
+                    <div class="team-card legend-card">
+                    <img src="images/lebron-james.png" alt="LeBron James" class="legend-image">
+                    <h3>LeBron James</h3>
+                    <p class="team-league">"King James"</p>
+                    <p class="team-description">4x NBA meistari, All-time leading scorer</p>
+                    </div>
+                </a>
+                <a class="team-card-link" href="legend.html?legend=shaquille-oneal">
+                    <div class="team-card legend-card">
+                    <img src="images/shaquille-oneal.png" alt="Shaquille O'Neal" class="legend-image">
+                    <h3>Shaquille O'Neal</h3>
+                    <p class="team-league">"Shaq"</p>
+                    <p class="team-description">4x NBA meistari - Ráðandi miðja NBA sögunnar</p>
                     </div>
                 </a>
             </div>
