--- a/index_is.html
+++ b/index_is.html
@@ -102,7 +102,7 @@
             <div class="teams-grid">
                 <a class="team-card-link" href="team.html?team=los-angeles-lakers">
                     <div class="team-card">
-                    <img src="images/los-angeles-lakers.png" alt="Los Angeles Lakers" class="team-image">
+                    <img src="images/los-angeles-lakers.svg" alt="Los Angeles Lakers" class="team-image">
                     <h3>Los Angeles Lakers</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Eitt af deildum legustu liðum NBA með 17 meistaratitlum</p>
@@ -110,7 +110,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=golden-state-warriors">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/01/Golden_State_Warriors_logo.svg/1200px-Golden_State_Warriors_logo.svg.png" alt="Golden State Warriors" class="team-image">
+                    <img src="images/golden-state-warriors.svg" alt="Golden State Warriors" class="team-image">
                     <h3>Golden State Warriors</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Þekkt fyrir bylting þrjú stiga leik sitt</p>
@@ -118,7 +118,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=miami-heat">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/fb/Miami_Heat_logo.svg/1200px-Miami_Heat_logo.svg.png" alt="Miami Heat" class="team-image">
+                    <img src="images/miami-heat.svg" alt="Miami Heat" class="team-image">
                     <h3>Miami Heat</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Klassísk austur lið með 3 meistaratitlum</p>
@@ -126,7 +126,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=fc-barcelona">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_%28basketball%29_logo.svg/1200px-FC_Barcelona_%28basketball%29_logo.svg.png" alt="FC Barcelona" class="team-image">
+                    <img src="images/fc-barcelona.png" alt="FC Barcelona" class="team-image">
                     <h3>FC Barcelona</h3>
                     <p class="team-league">ACB/EuroLeague</p>
                     <p class="team-description">Stendur yfir evrópskum körfubolti</p>
@@ -134,7 +134,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=chicago-bulls">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c4/Chicago_Bulls_logo.svg/1200px-Chicago_Bulls_logo.svg.png" alt="Chicago Bulls" class="team-image">
+                    <img src="images/chicago-bulls.svg" alt="Chicago Bulls" class="team-image">
                     <h3>Chicago Bulls</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Goðsögulegt lið frá tímum Michael Jordan</p>
@@ -142,7 +142,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=boston-celtics">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Boston_Celtics_logo.svg/1200px-Boston_Celtics_logo.svg.png" alt="Boston Celtics" class="team-image">
+                    <img src="images/boston-celtics.svg" alt="Boston Celtics" class="team-image">
                     <h3>Boston Celtics</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">17 NBA meistaratitlar, metafengi flokki með Lakers</p>
@@ -150,7 +150,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=new-york-knicks">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/ed/New_York_Knicks_logo.svg/1200px-New_York_Knicks_logo.svg.png" alt="New York Knicks" class="team-image">
+                    <img src="images/new-york-knicks.svg" alt="New York Knicks" class="team-image">
                     <h3>New York Knicks</h3>
                     <p class="team-league">NBA</p>
                     <p class="team-description">Lið Nýja Jórvíks með ríkri sögu</p>
@@ -158,7 +158,7 @@
                 </a>
                 <a class="team-card-link" href="team.html?team=real-madrid">
                     <div class="team-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a7/Real_Madrid_Baloncesto_logo.svg/1200px-Real_Madrid_Baloncesto_logo.svg.png" alt="Real Madrid" class="team-image">
+                    <img src="images/real-madrid.png" alt="Real Madrid" class="team-image">
                     <h3>Real Madrid</h3>
                     <p class="team-league">ACB/EuroLeague</p>
                     <p class="team-description">Evrópsk ofurkraft körfubolta</p>
