Add language switch EN/IS

--- a/index_en.html
+++ b/index_en.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="is">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basketball Hub - Allt um körfubolti</title>
-    <link rel="stylesheet" href="styles.css?v=4">
+    <title>Basketball Hub - All About Basketball</title>
+    <link rel="stylesheet" href="styles.css?v=3">
 </head>
 <body>
     <!-- Navigation -->
@@ -12,14 +12,14 @@
         <div class="nav-container">
             <div class="logo">🏀 Basketball Hub</div>
             <ul class="nav-menu">
-                <li><a href="#home" class="nav-link active">Heim</a></li>
-                <li><a href="#about" class="nav-link">Um körfubolti</a></li>
-                <li><a href="#rules" class="nav-link">Reglur</a></li>
-                <li><a href="#teams" class="nav-link">Lið</a></li>
-                <li><a href="#legends" class="nav-link">Goðsagnir</a></li>
-                <li><a href="#contact" class="nav-link">Samband</a></li>
+                <li><a href="#home" class="nav-link active">Home</a></li>
+                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#rules" class="nav-link">Rules</a></li>
+                <li><a href="#teams" class="nav-link">Teams</a></li>
+                <li><a href="#legends" class="nav-link">Legends</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
-            <a href="index_en.html" class="lang-switch" title="English">🇬🇧 EN</a>
+            <a href="index.html" class="lang-switch" title="Íslenska">🇮🇸 IS</a>
             <div class="hamburger">
                 <span></span>
                 <span></span>
@@ -31,28 +31,28 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Velkomin í Basketball Hub</h1>
-            <p>Þinn gagnabrunnur fyrir upplýsingar um körfubolti</p>
-            <button class="cta-button">Byrja</button>
+            <h1>Welcome to Basketball Hub</h1>
+            <p>Your ultimate source for basketball information</p>
+            <button class="cta-button">Get Started</button>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2>Um körfubolti</h2>
+            <h2>About Basketball</h2>
             <div class="about-content">
                 <div class="about-card">
-                    <h3>Sögur</h3>
-                    <p>Körfubolti var fundinn upp árið 1891 af kanadíska líkamsrækti kennara James Naismith. Leikurinn varð fljótt vinsæll um allan heiminn.</p>
+                    <h3>History</h3>
+                    <p>Basketball was invented in 1891 by Canadian physical education instructor James Naismith. The game quickly became popular around the world.</p>
                 </div>
                 <div class="about-card">
-                    <h3>Vinsældir</h3>
-                    <p>Í dag er körfubolti ein vinsælsta íþróttir í heimi. NBA, EuroLeague og aðrar deildir laða að sér milljónir aðdáenda.</p>
+                    <h3>Popularity</h3>
+                    <p>Today, basketball is one of the most popular sports in the world. NBA, EuroLeague and other leagues attract millions of fans.</p>
                 </div>
                 <div class="about-card">
-                    <h3>Þróun</h3>
-                    <p>Körfubolti er stöðugt að þróast með nýjum aðferðum, tækni og reglum til að bæta gæði leiksins.</p>
+                    <h3>Evolution</h3>
+                    <p>Basketball is constantly evolving with new techniques, technology and rules to improve the quality of the game.</p>
                 </div>
             </div>
         </div>
@@ -61,37 +61,37 @@
     <!-- Rules Section -->
     <section id="rules" class="rules">
         <div class="container">
-            <h2>Grunnreglur</h2>
+            <h2>Basic Rules</h2>
             <div class="rules-grid">
                 <div class="rule-item">
                     <div class="rule-number">1</div>
-                    <h4>Markmið leiksins</h4>
-                    <p>Hifa boltann í körfu andstæðingsins oftar en andstæðingur hendir í þína</p>
+                    <h4>Objective</h4>
+                    <p>Score the ball in the opponent's basket more times than they score in yours</p>
                 </div>
                 <div class="rule-item">
                     <div class="rule-number">2</div>
-                    <h4>Leiðing bolta</h4>
-                    <p>Leikmaður getur leitt boltann um valinn með því að slá honum á jörðina með hendi</p>
+                    <h4>Dribbling</h4>
+                    <p>A player can move the ball around the court by bouncing it on the floor with one hand</p>
                 </div>
                 <div class="rule-item">
                     <div class="rule-number">3</div>
-                    <h4>Frambjóðanir</h4>
-                    <p>Hægt er að framboða boltann milli leikmanna á hvaða hátt sem er</p>
+                    <h4>Passing</h4>
+                    <p>The ball can be passed between players in any manner</p>
                 </div>
                 <div class="rule-item">
                     <div class="rule-number">4</div>
-                    <h4>Brot</h4>
-                    <p>Líkamlegur snertingur umfram leyfilegt er brot</p>
+                    <h4>Fouls</h4>
+                    <p>Physical contact beyond what is allowed is a foul</p>
                 </div>
                 <div class="rule-item">
                     <div class="rule-number">5</div>
-                    <h4>Þrjú sekúndu regla</h4>
-                    <p>Stuðningurinn getur ekki verið undir körfunni í meira en 3 sekúndur</p>
+                    <h4>Three-Second Rule</h4>
+                    <p>An offensive player cannot stay in the paint for more than 3 seconds</p>
                 </div>
                 <div class="rule-item">
                     <div class="rule-number">6</div>
-                    <h4>Útilegumál og veiflun</h4>
-                    <p>Bolti utan vallar - útilegumál, bolti getur verið veiflað úr höndum</p>
+                    <h4>Out of Bounds</h4>
+                    <p>Ball outside the court is out of bounds, possession goes to the other team</p>
                 </div>
             </div>
         </div>
@@ -100,70 +100,70 @@
     <!-- Teams Section -->
     <section id="teams" class="teams">
         <div class="container">
-            <h2>Þekkt lið</h2>
+            <h2>Famous Teams</h2>
             <div class="teams-grid">
-                <a class="team-card-link" href="team.html?team=los-angeles-lakers">
+                <a class="team-card-link" href="team_en.html?team=los-angeles-lakers">
                     <div class="team-card">
                     <img src="images/los-angeles-lakers.svg" alt="Los Angeles Lakers" class="team-image">
                     <h3>Los Angeles Lakers</h3>
                     <p class="team-league">NBA</p>
-                    <p class="team-description">Eitt af deildum legustu liðum NBA með 17 meistaratitlum</p>
+                    <p class="team-description">One of the most legendary NBA teams with 17 championships</p>
                     </div>
                 </a>
-                <a class="team-card-link" href="team.html?team=chicago-bulls">
+                <a class="team-card-link" href="team_en.html?team=chicago-bulls">
                     <div class="team-card">
                     <img src="images/chicago-bulls.svg" alt="Chicago Bulls" class="team-image">
                     <h3>Chicago Bulls</h3>
                     <p class="team-league">NBA</p>
-                    <p class="team-description">Goðsögulegt lið frá tímum Michael Jordan</p>
+                    <p class="team-description">Legendary team from Michael Jordan's era</p>
                     </div>
                 </a>
-                <a class="team-card-link" href="team.html?team=boston-celtics">
+                <a class="team-card-link" href="team_en.html?team=boston-celtics">
                     <div class="team-card">
                     <img src="images/boston-celtics.svg" alt="Boston Celtics" class="team-image">
                     <h3>Boston Celtics</h3>
                     <p class="team-league">NBA</p>
-                    <p class="team-description">17 NBA meistaratitlar, metafengi flokki með Lakers</p>
+                    <p class="team-description">17 NBA championships, tied for most with Lakers</p>
                     </div>
                 </a>
-                <a class="team-card-link" href="team.html?team=golden-state-warriors">
+                <a class="team-card-link" href="team_en.html?team=golden-state-warriors">
                     <div class="team-card">
                     <img src="images/golden-state-warriors.svg" alt="Golden State Warriors" class="team-image">
                     <h3>Golden State Warriors</h3>
                     <p class="team-league">NBA</p>
-                    <p class="team-description">Þekkt fyrir bylting þrjú stiga leik sitt</p>
+                    <p class="team-description">Known for revolutionizing the three-point game</p>
                     </div>
                 </a>
-                <a class="team-card-link" href="team.html?team=miami-heat">
+                <a class="team-card-link" href="team_en.html?team=miami-heat">
                     <div class="team-card">
                     <img src="images/miami-heat.svg" alt="Miami Heat" class="team-image">
                     <h3>Miami Heat</h3>
                     <p class="team-league">NBA</p>
-                    <p class="team-description">Klassísk austur lið með 3 meistaratitlum</p>
+                    <p class="team-description">Classic Eastern Conference team with 3 championships</p>
                     </div>
                 </a>
-                <a class="team-card-link" href="team.html?team=new-york-knicks">
+                <a class="team-card-link" href="team_en.html?team=new-york-knicks">
                     <div class="team-card">
                     <img src="images/new-york-knicks.svg" alt="New York Knicks" class="team-image">
                     <h3>New York Knicks</h3>
                     <p class="team-league">NBA</p>
-                    <p class="team-description">Lið Nýja Jórvíks með ríkri sögu</p>
+                    <p class="team-description">New York's team with a rich history</p>
                     </div>
                 </a>
-                <a class="team-card-link" href="team.html?team=brooklyn-nets">
+                <a class="team-card-link" href="team_en.html?team=brooklyn-nets">
                     <div class="team-card">
                     <img src="images/brooklyn-nets.svg" alt="Brooklyn Nets" class="team-image">
                     <h3>Brooklyn Nets</h3>
                     <p class="team-league">NBA</p>
-                    <p class="team-description">Nýja Brooklyn körfubolti lið með stærk menn</p>
+                    <p class="team-description">Brooklyn's basketball team with star players</p>
                     </div>
                 </a>
-                <a class="team-card-link" href="team.html?team=dallas-mavericks">
+                <a class="team-card-link" href="team_en.html?team=dallas-mavericks">
                     <div class="team-card">
                     <img src="images/dallas-mavericks.svg" alt="Dallas Mavericks" class="team-image">
                     <h3>Dallas Mavericks</h3>
                     <p class="team-league">NBA</p>
-                    <p class="team-description">Texas körfuboltaliðið með glæsilegt leikstíl</p>
+                    <p class="team-description">Texas basketball team with spectacular play style</p>
                     </div>
                 </a>
             </div>
@@ -173,38 +173,38 @@
     <!-- Legends Section -->
     <section id="legends" class="teams legends-section">
         <div class="container">
-            <h2>🏆 Goðsagnir körfuboltans</h2>
+            <h2>🏆 Basketball Legends</h2>
             <div class="teams-grid">
-                <a class="team-card-link" href="legend.html?legend=michael-jordan">
+                <a class="team-card-link" href="legend_en.html?legend=michael-jordan">
                     <div class="team-card legend-card">
                     <img src="images/michael-jordan.png" alt="Michael Jordan" class="legend-image">
                     <h3>Michael Jordan</h3>
                     <p class="team-league">"His Airness"</p>
-                    <p class="team-description">6x NBA meistari, 5x MVP - Besti leikmaður allra tíma</p>
+                    <p class="team-description">6x NBA Champion, 5x MVP - Greatest of All Time</p>
                     </div>
                 </a>
-                <a class="team-card-link" href="legend.html?legend=kobe-bryant">
+                <a class="team-card-link" href="legend_en.html?legend=kobe-bryant">
                     <div class="team-card legend-card">
                     <img src="images/kobe-bryant.png" alt="Kobe Bryant" class="legend-image">
                     <h3>Kobe Bryant</h3>
                     <p class="team-league">"Black Mamba"</p>
-                    <p class="team-description">5x NBA meistari, 18x All-Star - Mamba Mentality</p>
+                    <p class="team-description">5x NBA Champion, 18x All-Star - Mamba Mentality</p>
                     </div>
                 </a>
-                <a class="team-card-link" href="legend.html?legend=lebron-james">
+                <a class="team-card-link" href="legend_en.html?legend=lebron-james">
                     <div class="team-card legend-card">
                     <img src="images/lebron-james.png" alt="LeBron James" class="legend-image">
                     <h3>LeBron James</h3>
                     <p class="team-league">"King James"</p>
-                    <p class="team-description">4x NBA meistari, All-time leading scorer</p>
+                    <p class="team-description">4x NBA Champion, All-time Leading Scorer</p>
                     </div>
                 </a>
-                <a class="team-card-link" href="legend.html?legend=shaquille-oneal">
+                <a class="team-card-link" href="legend_en.html?legend=shaquille-oneal">
                     <div class="team-card legend-card">
                     <img src="images/shaquille-oneal.png" alt="Shaquille O'Neal" class="legend-image">
                     <h3>Shaquille O'Neal</h3>
                     <p class="team-league">"Shaq"</p>
-                    <p class="team-description">4x NBA meistari - Ráðandi miðja NBA sögunnar</p>
+                    <p class="team-description">4x NBA Champion - Most Dominant Center Ever</p>
                     </div>
                 </a>
             </div>
@@ -214,12 +214,12 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2>Hafðu samband við okkur</h2>
+            <h2>Contact Us</h2>
             <form class="contact-form" id="contactForm">
-                <input type="text" placeholder="Þitt nafn" required>
-                <input type="email" placeholder="Þinn netfang" required>
-                <textarea placeholder="Þín skilaboð" rows="5" required></textarea>
-                <button type="submit" class="submit-btn">Senda</button>
+                <input type="text" placeholder="Your name" required>
+                <input type="email" placeholder="Your email" required>
+                <textarea placeholder="Your message" rows="5" required></textarea>
+                <button type="submit" class="submit-btn">Send</button>
             </form>
         </div>
     </section>
@@ -227,7 +227,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Basketball Hub. Allar réttindi áskilin.</p>
+            <p>&copy; 2025 Basketball Hub. All rights reserved.</p>
             <div class="social-links">
                 <a href="#" class="social-link">Twitter</a>
                 <a href="#" class="social-link">Instagram</a>
