Add dark/light theme toggle with localStorage persistence

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="#contact" class="nav-link">Samband</a></li>
             </ul>
             <a href="index_en.html" class="lang-switch" title="English">🇬🇧 EN</a>
+            <button id="themeToggle" class="theme-toggle" aria-label="Переключить тему">🌙</button>
             <div class="hamburger">
                 <span></span>
                 <span></span>
