Add theme toggle to all pages and improve button visibility with smooth transitions

--- a/index_en.html
+++ b/index_en.html
@@ -20,6 +20,7 @@
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <a href="index.html" class="lang-switch" title="Íslenska">🇮🇸 IS</a>
+            <button id="themeToggle" class="theme-toggle" aria-label="Toggle theme">🌙</button>
             <div class="hamburger">
                 <span></span>
                 <span></span>
