--- a/legend.html
+++ b/legend.html
@@ -175,6 +175,7 @@
             <li><a href="index.html#teams" class="nav-link">Lið</a></li>
             <li><a href="index.html#legends" class="nav-link">Goðsagnir</a></li>
         </ul>
+        <button id="themeToggle" class="theme-toggle" aria-label="Skipta þema">🌙</button>
     </div>
 </nav>
 
