--- a/legend_en.html
+++ b/legend_en.html
@@ -176,6 +176,7 @@
             <li><a href="index_en.html#legends" class="nav-link">Legends</a></li>
         </ul>
         <a href="legend.html" class="lang-switch" title="Íslenska">🇮🇸 IS</a>
+        <button id="themeToggle" class="theme-toggle" aria-label="Toggle theme">🌙</button>
     </div>
 </nav>
 
