--- a/team.html
+++ b/team.html
@@ -17,6 +17,7 @@
             <li><a href="#teams" class="nav-link">Lið</a></li>
             <li><a href="#contact" class="nav-link">Samband</a></li>
         </ul>
+        <button id="themeToggle" class="theme-toggle" aria-label="Skipta þema">🌙</button>
     </div>
 </nav>
 
