--- a/team_en.html
+++ b/team_en.html
@@ -18,6 +18,7 @@
             <li><a href="index_en.html#legends" class="nav-link">Legends</a></li>
         </ul>
         <a href="team.html" class="lang-switch" title="Íslenska">🇮🇸 IS</a>
+        <button id="themeToggle" class="theme-toggle" aria-label="Toggle theme">🌙</button>
     </div>
 </nav>
 
